--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "r3f-perf": "^6.6.3",
     "react": "18.2",
     "react-dom": "18.2",
+    "react-particles-webgl": "^1.0.10",
     "three": "^0.148.0",
     "zustand": "4.1"
   }
