--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -16,6 +17,7 @@
     "@react-three/fiber": "^8.9.2",
     "@react-three/postprocessing": "^2.7.0",
     "@react-three/rapier": "^0.12.2",
+    "gh-pages": "^5.0.0",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
     "react-dom": "18.2",
